# agentic_platform_backend

./: .env  .gitignore  app_config.py  gemini_adapter.py  main.py  pyproject.toml
agents/document_handling_agent/: config.py  orchestrator_agent.py  workflow_pipeline.py
agents/document_handling_agent/subagents/: document_classifier_agent.py  document_extraction_agent.py  document_validation_agent.py
agents/prototype_agent/: config.py  orchestrator_agent.py
agents/prototype_agent/subsgents/: agent1.py
custom_tools/: docling_tool.py  fetch_document_tool.py  image_retrieval_tool.py  pdf_export_tool.py  scraping_tool.py  web_search_tool.py
interfaces/agent_run/: controller.py  service.py  util.py
interfaces/team_run/: controller.py
interfaces/utils/: id_validation.py
services/: crawl_service.py  db_service.py
teams/: document_processing_team.py
templates/: agent_os_template.py  agent_template.py
utils/: agno_db.py
