[project]
name = "agentic_platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Debarun",email = "paldebarun27@gmail.com"}
]
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "agno (>=2.5.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
