[project]
name = "agentic_platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Debarun",email = "paldebarun27@gmail.com"}
]
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "agno (>=2.5.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "blake3 (>=1.0.8,<2.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "ag-ui-protocol (>=0.1.14,<0.2.0)",
    "google-genai (>=1.70.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
